# cpu16

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
debugger/: Cargo.toml
debugger/src/: main.rs
debugger/static/: index.html
examples/: binary_search.asm  bubble_sort.asm  factorial.asm  fibonacci.asm  interrupt_demo.asm  sieve.asm  stack_calc.asm
src/: assembler.rs  cache.rs  cpu.rs  flags.rs  isa.rs  lib.rs  main.rs  memory.rs  pipeline.rs
src/assembler/: main.rs
tests/: integration_tests.rs
