[workspace]
members = [".", "debugger"]
resolver = "2"

[package]
name = "cpu16"
version = "0.1.0"
edition = "2024"

description = "A custom 16-bit CPU emulator with assembler, written in Rust"
license = "MIT"

[[bin]]
name = "cpu16"
path = "src/main.rs"

[[bin]]
name = "asm"
path = "src/assembler/main.rs"

[dev-dependencies]